<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize">

    <ImageView
        android:id="@+id/imgToolbarLogo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/fab_margin"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/text_toolbar_image_desc"
        android:focusable="true"
        android:src="@drawable/ic_droidcon_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/feed"
        android:textColor="@color/colorPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnToolbarIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/text_toolbar_icon_desc"
        android:focusable="true"
        android:src="@drawable/ic_sign_in_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>