<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/text_toolbar_image_desc"
            android:src="@drawable/ic_droidcon_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/fab_margin"/>


            <TextView
                android:id="@+id/tvToolbarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:textColor="@color/colorDarkPurple"
                android:textSize="16sp"
                android:text="@string/title_feedback"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/btnToolbarIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/text_toolbar_icon_desc"
            android:src="@drawable/ic_sign_in_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/fab_margin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.MaterialToolbar>