<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/text_toolbar_image_desc"
            android:src="@drawable/ic_droidcon_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/fab_margin"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnFeedback"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_smiley_outline"
            android:drawableEnd="@drawable/ic_send"
            android:drawablePadding="6dp"
            android:text="@string/text_button_feedback_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_button_bg"
            app:cornerRadius="5dp"
            >
            <ImageView
                android:id="@+id/imgSmiley"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_smiley_outline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"/>
            <TextView
                android:id="@+id/tVFeedBackLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/text_button_feedback_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:id="@+id/imgSend"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_send"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintStart_toEndOf="@id/tVFeedBackLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <ImageView
            android:id="@+id/btnToolbarIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/text_toolbar_icon_desc"
            android:src="@drawable/ic_man"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFeedback"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="@dimen/fab_margin"/>

        <View
            android:id="@+id/circleImageViewBg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/img_circular_outline_bg"
            app:layout_constraintBottom_toBottomOf="@+id/btnToolbarIcon"
            app:layout_constraintEnd_toEndOf="@+id/btnToolbarIcon"
            app:layout_constraintStart_toEndOf="@+id/btnToolbarIcon"
            app:layout_constraintTop_toTopOf="@+id/btnToolbarIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.appbar.MaterialToolbar>